Updated the bibliography

--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -1,122 +1,381 @@
-@misc{Parkins2017,
-author = {Parkins, David},
-booktitle = {Economist (United Kingdom)},
-issn = {00130613},
-mendeley-groups = {I4.0/BigData},
-number = {9035},
-title = {{Regulating the internet giants: The world's most valuable resource is no longer oil, but data}},
-url = {https://www.economist.com/leaders/2017/05/06/the-worlds-most-valuable-resource-is-no-longer-oil-but-data?fbclid=IwAR1EaO3g6OJoDuhrHBNyqQJAqR2NyhvcZ07uexTWa3Hujq0azNMVHKhQido},
-urldate = {2020-01-21},
-volume = {413},
-year = {2017}
+@inproceedings{sec_pow_blockchains,
+  author    = {Arthur Gervais and
+               Ghassan O. Karame and
+               Karl W{\"{u}}st and
+               Vasileios Glykantzis and
+               Hubert Ritzdorf and
+               Srdjan Capkun},
+  editor    = {Edgar R. Weippl and
+               Stefan Katzenbeisser and
+               Christopher Kruegel and
+               Andrew C. Myers and
+               Shai Halevi},
+  title     = {On the Security and Performance of Proof of Work Blockchains},
+  booktitle = {Proceedings of the 2016 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, Vienna, Austria, October 24-28, 2016},
+  pages     = {3--16},
+  publisher = {{ACM}},
+  year      = {2016},
+  url       = {https://doi.org/10.1145/2976749.2978341},
+  doi       = {10.1145/2976749.2978341},
+  timestamp = {Tue, 10 Nov 2020 20:00:49 +0100},
+  biburl    = {https://dblp.org/rec/conf/ccs/GervaisKWGRC16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@Misc{ Artho03,
-	author = "C. Artho and K. Havelund and A. Biere",
-	title = "High-Level Data Races",
-	text = "C. Artho, K. Havelund, and A. Biere. High-Level Data Races. In VVEIS'03, The First International Workshop on Verification and Validation of Enterprise Information Systems, April 2003. Angers, France.",
-	year = "2003",
-	url = "citeseer.ist.psu.edu/artho03highlevel.html"
+
+
+@inproceedings{local_bitcoin_netsim,
+  author    = {Lina Alsahan and
+               Noureddine Lasla and
+               Mohamed Abdallah},
+  title     = {Local Bitcoin Network Simulator for Performance Evaluation using Lightweight
+               Virtualization},
+  booktitle = {{IEEE} International Conference on Informatics, IoT, and Enabling
+               Technologies, ICIoT 2020, Doha, Qatar, February 2-5, 2020},
+  pages     = {355--360},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/ICIoT48696.2020.9089630},
+  doi       = {10.1109/ICIoT48696.2020.9089630},
+  timestamp = {Tue, 29 Dec 2020 18:37:25 +0100},
+  biburl    = {https://dblp.org/rec/conf/iciot3/AlsahanLA20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@InProceedings{ Artho04,
-	author = "Cyrille Artho and Klaus Havelund and Armin Biere",
-	title = "Using Block-Local Atomicity to Detect Stale-Value Concurrency Errors",
-	booktitle = "ATVA",
-	year = "2004",
-	pages = "150--164",
-	crossref = "DBLP:conf/atva/2004",
-	bibsource = "DBLP, http://dblp.uni-trier.de",
-	ee = "http://springerlink.metapress.com/openurl.asp?genre=article{\&}issn=0302-9743{\&}volume=3299{\&}spage=150"
+
+
+@mastersthesis{evibes,
+  author  = {Aditya Shrikant Deshpande},
+  title   = {Design and Implementation of an Ethereum-like Blockchain Simulation Framework},
+  school  = {Technical University of Munich},
+  year    = {2018}
 }
 
-@Article{ Beckman08,
-	title = "Verifying Correct Usage of Atomic Blocks and Typestate",
-	author = "Nels E. Beckman and Kevin Bierhoff and Jonathan Aldrich",
-	publisher = "ACM",
-	address = "New York, NY, USA",
-	journal = "SIGPLAN Not.",
-	pages = "227--244",
-	volume = "43",
-	number = "10",
-	year = "2008",
-	issn = "0362-1340",
-	doi = "http://doi.acm.org/10.1145/1449955.1449783"
+
+
+@mastersthesis{blocksim1,
+  author  = {Carlos Sérgio Figueira Faria},
+  title   = {BlockSim: Blockchain Simulator},
+  school  = {Instituto Superior Técnico},
+  year    = {2018}
 }
 
-@InProceedings{ Flanagan04,
-	author = "Cormac Flanagan and Stephen N Freund",
-	title = "Atomizer: a dynamic atomicity checker for multithreaded programs",
-	booktitle = "POPL '04: Proceedings of the 31st ACM SIGPLAN-SIGACT symposium on Principles of programming languages",
-	year = "2004",
-	isbn = "1-58113-729-X",
-	pages = "256--267",
-	location = "Venice, Italy",
-	doi = "http://doi.acm.org/10.1145/964001.964023",
-	publisher = "ACM",
-	address = "New York, NY, USA"
+
+
+@article{blocksim2,
+  author    = {Maher Alharby and
+               Aad van Moorsel},
+  title     = {BlockSim: An Extensible Simulation Tool for Blockchain Systems},
+  journal   = {Frontiers Blockchain},
+  volume    = {3},
+  pages     = {28},
+  year      = {2020},
+  url       = {https://doi.org/10.3389/fbloc.2020.00028},
+  doi       = {10.3389/fbloc.2020.00028},
+  timestamp = {Tue, 23 Jun 2020 17:41:28 +0200},
+  biburl    = {https://dblp.org/rec/journals/fbloc/AlharbyM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@Misc{ IBM-Rep,
-	title = "{IBM's Concurrency Testing Repository}"
+
+
+@inproceedings{simblock,
+  author    = {Yusuke Aoki and
+               Kai Otsuki and
+               Takeshi Kaneko and
+               Ryohei Banno and
+               Kazuyuki Shudo},
+  title     = {SimBlock: {A} Blockchain Network Simulator},
+  booktitle = {{IEEE} {INFOCOM} 2019 - {IEEE} Conference on Computer Communications
+               Workshops, {INFOCOM} Workshops 2019, Paris, France, April 29 - May
+               2, 2019},
+  pages     = {325--329},
+  publisher = {{IEEE}},
+  year      = {2019},
+  url       = {https://doi.org/10.1109/INFCOMW.2019.8845253},
+  doi       = {10.1109/INFCOMW.2019.8845253},
+  timestamp = {Wed, 16 Oct 2019 14:14:51 +0200},
+  biburl    = {https://dblp.org/rec/conf/infocom/AokiOKBS19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@InProceedings{ Praun03,
-	author = "Christoph {von Praun} and Thomas R. Gross",
-	title = "Static Detection of Atomicity Violations in Object-Oriented Programs",
-	booktitle = "Journal of Object Technology",
-	year = "2003",
-	pages = "2004"
+
+
+@mastersthesis{vibes,
+  author  = {Lyubomir Stoykov},
+  title   = {VIBES: Fast Blockchain Simulations for Large-scale Peer-to-Peer Networks},
+  school  = {Technical University of Munich},
+  year    = {2018}
 }
 
-@InProceedings{ Shavit95,
-	author = "Nir Shavit and Dan Touitou",
-	title = "Software transactional memory",
-	booktitle = "PODC '95: Proceedings of the fourteenth annual ACM symposium on Principles of distributed computing",
-	year = "1995",
-	isbn = "0-89791-710-3",
-	pages = "204--213",
-	location = "Ottowa, Ontario, Canada",
-	doi = "http://doi.acm.org/10.1145/224964.224987",
-	publisher = "ACM",
-	address = "New York, NY, USA"
+
+
+@misc{paxos_made_simple,
+  author       = {Leslie Lamport},
+  title        = {Paxos Made Simple},
+  howpublished = {online},
+  url          = {https://lamport.azurewebsites.net/pubs/paxos-simple.pdf},
+  year         = {2001}
 }
 
-@Book{ Silberschatz06,
-	author = "Abraham Silberschatz and Henry F. Korth and S. Sudarshan",
-	title = "Database System Concepts",
-	publisher = "McGraw-Hill",
-	year = "2006",
-	edition = "Fifth",
-	isbn = "007-124476-X"
+
+
+@inproceedings{paxos_vs_raft,
+  author    = {Heidi Howard and
+               Richard Mortier},
+  editor    = {Alan D. Fekete and
+               Martin Kleppmann},
+  title     = {Paxos vs Raft: have we reached consensus on distributed consensus?},
+  booktitle = {7th Workshop on Principles and Practice of Consistency for Distributed
+               Data, PaPoC@EuroSys 2020, Heraklion, Greece, April 27, 2020},
+  pages     = {8:1--8:9},
+  publisher = {{ACM}},
+  year      = {2020},
+  url       = {https://doi.org/10.1145/3380787.3393681},
+  doi       = {10.1145/3380787.3393681},
+  timestamp = {Sun, 25 Oct 2020 22:57:24 +0100},
+  biburl    = {https://dblp.org/rec/conf/eurosys/HowardM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@Book{ Moss85,
-	author = "J. Eliot B. Moss",
-	title = "Nested transactions: an approach to reliable distributed computing",
-	year = "1985",
-	isbn = "0-262-13200-1",
-	publisher = "Massachusetts Institute of Technology",
-	address = "Cambridge, MA, USA"
+
+
+@inproceedings{raft,
+  author    = {Diego Ongaro and
+               John K. Ousterhout},
+  editor    = {Garth Gibson and
+               Nickolai Zeldovich},
+  title     = {In Search of an Understandable Consensus Algorithm},
+  booktitle = {2014 {USENIX} Annual Technical Conference, {USENIX} {ATC} '14, Philadelphia,
+               PA, USA, June 19-20, 2014},
+  pages     = {305--319},
+  publisher = {{USENIX} Association},
+  year      = {2014},
+  url       = {https://www.usenix.org/conference/atc14/technical-sessions/presentation/ongaro},
+  timestamp = {Mon, 01 Feb 2021 08:43:54 +0100},
+  biburl    = {https://dblp.org/rec/conf/usenix/OngaroO14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@Proceedings{ DBLP:conf/atva/2004,
-	editor = "Farn Wang",
-	title = "Automated Technology for Verification and Analysis: Second International Conference, ATVA 2004, Taipei, Taiwan, ROC, October 31-November 3, 2004. Proceedings",
-	booktitle = "ATVA",
-	publisher = "Springer",
-	series = "Lecture Notes in Computer Science",
-	volume = "3299",
-	year = "2004",
-	isbn = "3-540-23610-4",
-	bibsource = "DBLP, http://dblp.uni-trier.de"
+
+
+@article{survey_bchain_networks,
+  author    = {Yang Xiao and
+               Ning Zhang and
+               Wenjing Lou and
+               Y. Thomas Hou},
+  title     = {A Survey of Distributed Consensus Protocols for Blockchain Networks},
+  journal   = {{IEEE} Commun. Surv. Tutorials},
+  volume    = {22},
+  number    = {2},
+  pages     = {1432--1465},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/COMST.2020.2969706},
+  doi       = {10.1109/COMST.2020.2969706},
+  timestamp = {Thu, 06 Aug 2020 21:48:58 +0200},
+  biburl    = {https://dblp.org/rec/journals/comsur/XiaoZLH20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{ ecoop12-dias,
-        author = { Dias, Ricardo J. and Distefano, Dino and Seco, J. C. and Lourenço,  João M. },
-        title = { Verification of Snapshot Isolation in Transactional Memory Java Programs },
-        booktitle = { Proceedings of the 26th European conference on Object-oriented programming ({ECOOP}'12) },
-        publisher = { Springer-Verlag },
-        year = { 2012 },
-        month = jun,
+
+
+@misc{bitcoin,
+  author       = {Satoshi Nakamoto},
+  title        = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  howpublished = {online},
+  url          = {https://bitcoin.org/bitcoin.pdf},
+  year         = {2008}
+}
+
+
+
+@misc{ethereum_whitepaper,
+  author       = {Vitalik Buterin},
+  title        = {Ethereum Whitepaper},
+  howpublished = {online},
+  url          = {https://ethereum.org/en/whitepaper/},
+  year         = {2013}
+}
+
+
+
+@misc{ethereum_yellowpaper,
+  author       = {Gavin Wood},
+  title        = {ETHEREUM: A SECURE DECENTRALISED GENERALISED TRANSACTION LEDGER},
+  howpublished = {online},
+  url          = {https://ethereum.github.io/yellowpaper/paper.pdf},
+  year         = {2021}
+}
+
+
+
+@inproceedings{hyperledger_fabric,
+  author    = {Elli Androulaki and
+               Artem Barger and
+               Vita Bortnikov and
+               Christian Cachin and
+               Konstantinos Christidis and
+               Angelo De Caro and
+               David Enyeart and
+               Christopher Ferris and
+               Gennady Laventman and
+               Yacov Manevich and
+               Srinivasan Muralidharan and
+               Chet Murthy and
+               Binh Nguyen and
+               Manish Sethi and
+               Gari Singh and
+               Keith Smith and
+               Alessandro Sorniotti and
+               Chrysoula Stathakopoulou and
+               Marko Vukolic and
+               Sharon Weed Cocco and
+               Jason Yellick},
+  editor    = {Rui Oliveira and
+               Pascal Felber and
+               Y. Charlie Hu},
+  title     = {Hyperledger fabric: a distributed operating system for permissioned
+               blockchains},
+  booktitle = {Proceedings of the Thirteenth EuroSys Conference, EuroSys 2018, Porto,
+               Portugal, April 23-26, 2018},
+  pages     = {30:1--30:15},
+  publisher = {{ACM}},
+  year      = {2018},
+  url       = {https://doi.org/10.1145/3190508.3190538},
+  doi       = {10.1145/3190508.3190538},
+  timestamp = {Fri, 19 Jun 2020 16:42:40 +0200},
+  biburl    = {https://dblp.org/rec/conf/eurosys/AndroulakiBBCCC18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{paxos_complex,
+  author    = {Robbert van Renesse and
+               Deniz Altinbuken},
+  title     = {Paxos Made Moderately Complex},
+  journal   = {{ACM} Comput. Surv.},
+  volume    = {47},
+  number    = {3},
+  pages     = {42:1--42:36},
+  year      = {2015},
+  url       = {https://doi.org/10.1145/2673577},
+  doi       = {10.1145/2673577},
+  timestamp = {Fri, 26 May 2017 22:54:59 +0200},
+  biburl    = {https://dblp.org/rec/journals/csur/RenesseA15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{paxos_live,
+  author    = {Tushar Deepak Chandra and
+               Robert Griesemer and
+               Joshua Redstone},
+  editor    = {Indranil Gupta and
+               Roger Wattenhofer},
+  title     = {Paxos made live: an engineering perspective},
+  booktitle = {Proceedings of the Twenty-Sixth Annual {ACM} Symposium on Principles
+               of Distributed Computing, {PODC} 2007, Portland, Oregon, USA, August
+               12-15, 2007},
+  pages     = {398--407},
+  publisher = {{ACM}},
+  year      = {2007},
+  url       = {https://doi.org/10.1145/1281100.1281103},
+  doi       = {10.1145/1281100.1281103},
+  timestamp = {Wed, 14 Nov 2018 10:51:56 +0100},
+  biburl    = {https://dblp.org/rec/conf/podc/ChandraGR07.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@book{dist_sys_book,
+  author    = {George Coulouris and
+               Jean Dollimore and
+               Tim Kindberg},
+  title     = {Distributed systems - concepts and designs {(3.} ed.)},
+  series    = {International computer science series},
+  publisher = {Addison-Wesley-Longman},
+  year      = {2002},
+  isbn      = {978-0-201-61918-8},
+  timestamp = {Tue, 12 Apr 2011 15:08:26 +0200},
+  biburl    = {https://dblp.org/rec/books/daglib/0006727.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{info_propagation_bitcoin,
+  author    = {Christian Decker and
+               Roger Wattenhofer},
+  title     = {Information propagation in the Bitcoin network},
+  booktitle = {13th {IEEE} International Conference on Peer-to-Peer Computing, {IEEE}
+               {P2P} 2013, Trento, Italy, September 9-11, 2013, Proceedings},
+  pages     = {1--10},
+  publisher = {{IEEE}},
+  year      = {2013},
+  url       = {https://doi.org/10.1109/P2P.2013.6688704},
+  doi       = {10.1109/P2P.2013.6688704},
+  timestamp = {Wed, 16 Oct 2019 14:14:52 +0200},
+  biburl    = {https://dblp.org/rec/conf/p2p/DeckerW13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{algorand_scale_byz_agreements,
+  author    = {Yossi Gilad and
+               Rotem Hemo and
+               Silvio Micali and
+               Georgios Vlachos and
+               Nickolai Zeldovich},
+  title     = {Algorand: Scaling Byzantine Agreements for Cryptocurrencies},
+  booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles,
+               Shanghai, China, October 28-31, 2017},
+  pages     = {51--68},
+  publisher = {{ACM}},
+  year      = {2017},
+  url       = {https://doi.org/10.1145/3132747.3132757},
+  doi       = {10.1145/3132747.3132757},
+  timestamp = {Tue, 06 Nov 2018 16:59:32 +0100},
+  biburl    = {https://dblp.org/rec/conf/sosp/GiladHMVZ17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{algorand_agreement,
+  author    = {Jing Chen and
+               Sergey Gorbunov and
+               Silvio Micali and
+               Georgios Vlachos},
+  title     = {{ALGORAND} {AGREEMENT:} Super Fast and Partition Resilient Byzantine
+               Agreement},
+  journal   = {{IACR} Cryptol. ePrint Arch.},
+  volume    = {2018},
+  pages     = {377},
+  year      = {2018},
+  url       = {https://eprint.iacr.org/2018/377},
+  timestamp = {Mon, 11 May 2020 15:56:58 +0200},
+  biburl    = {https://dblp.org/rec/journals/iacr/ChenGMV18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{casperffg,
+  author    = {Vitalik Buterin and
+               Virgil Griffith},
+  title     = {Casper the Friendly Finality Gadget},
+  journal   = {CoRR},
+  volume    = {abs/1710.09437},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1710.09437},
+  archivePrefix = {arXiv},
+  eprint    = {1710.09437},
+  timestamp = {Mon, 13 Aug 2018 16:48:53 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1710-09437.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
