--- a/novathesis/template.tex
+++ b/novathesis/template.tex
@@ -186,6 +186,7 @@
 \usepackage{paralist}     % To enable costumizble enumerates.  See the documentation.
 \usepackage[textsize=footnotesize]{todonotes}  % To register TODO notes in the text
 \usepackage{url}
+\usepackage{array}
 \usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
