Added some text formatting

--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -379,3 +379,14 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-1710-09437.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+
+@misc{eth2,
+  author       = {Ethereum},
+  title        = {The Beacon Chain},
+  howpublished = {online},
+  url          = {https://ethereum.org/en/eth2/beacon-chain/},
+  accessed     = {Februrary 15th 2021},
+  year         = {accessed: Februrary 15th 2021}
+}
