--- a/novathesis/template.tex
+++ b/novathesis/template.tex
@@ -187,9 +187,9 @@
 \usepackage[textsize=footnotesize]{todonotes}  % To register TODO notes in the text
 \usepackage{url}
 \usepackage{array}
-\usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+\usepackage{listings}
+\usepackage{xcolor}
+\usepackage{pgfGantt}
 
 
 
