Completed first version of chapter 4

--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -390,3 +390,47 @@
   accessed     = {Februrary 15th 2021},
   year         = {accessed: Februrary 15th 2021}
 }
+
+
+
+@misc{mpsc_rust,
+  author       = {Rust Documentation},
+  title        = {Module std::sync::mpsc},
+  howpublished = {online},
+  url          = {https://doc.rust-lang.org/std/sync/mpsc/},
+  accessed     = {Februrary 20th 2021},
+  year         = {accessed: Februrary 20th 2021}
+}
+
+
+
+@misc{my_github,
+  author       = {Miguel Alves},
+  title        = {MSc Dissertation Preparation},
+  howpublished = {online},
+  url          = {https://github.com/mce-alves/MSc-Dissertation-Preparation/tree/master/preparation/prototypes},
+  accessed     = {Februrary 20th 2021},
+  year         = {2021}
+}
+
+
+
+@misc{raft_tla,
+  author       = {Diego Ongaro},
+  title        = {Raft TLA Specification},
+  howpublished = {online},
+  url          = {https://github.com/ongardie/raft.tla},
+  accessed     = {Februrary 19th 2021},
+  year         = {accessed: Februrary 19th 2021}
+}
+
+
+
+@misc{ocamlnet,
+  author       = {Gerd Stolpmann},
+  title        = {Ocamlnet 4 Reference Manual},
+  howpublished = {online},
+  url          = {http://projects.camlcity.org/projects/dl/ocamlnet-4.1.8/doc/html-main/index.html},
+  accessed     = {Februrary 20th 2021},
+  year         = {accessed: Februrary 20th 2021}
+}
