Updated introduction chapter

--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -1,3 +1,19 @@
+@article{tezos,
+  author    = {Victor Allombert and
+               Mathias Bourgoin and
+               Julien Tesson},
+  title     = {Introduction to the Tezos Blockchain},
+  journal   = {CoRR},
+  volume    = {abs/1909.08458},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1909.08458},
+  archivePrefix = {arXiv},
+  eprint    = {1909.08458},
+  timestamp = {Tue, 24 Sep 2019 11:33:51 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1909-08458.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{sec_pow_blockchains,
   author    = {Arthur Gervais and
                Ghassan O. Karame and
@@ -434,3 +450,6 @@
   accessed     = {Februrary 20th 2021},
   year         = {accessed: Februrary 20th 2021}
 }
+
+
+
