--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -453,3 +453,22 @@
 
 
 
+@inproceedings{intro_simulation,
+  author    = {Jerry Banks},
+  editor    = {Phillip A. Farrington and
+               Harriet Black Nembhard and
+               David T. Sturrock and
+               Gerald W. Evans},
+  title     = {Introduction to simulation},
+  booktitle = {Proceedings of the 31st conference on Winter simulation: Simulation
+               - a bridge to the future, {WSC} 1999, Phoenix, AZ, USA, December 05-8,
+               1999, Volume 1},
+  pages     = {7--13},
+  publisher = {{WSC}},
+  year      = {1999},
+  url       = {http://doi.ieeecomputersociety.org/10.1109/WSC.1999.823046},
+  doi       = {10.1109/WSC.1999.823046},
+  timestamp = {Wed, 03 Jun 2015 17:42:53 +0200},
+  biburl    = {https://dblp.org/rec/conf/wsc/Banks99a.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
