--- a/novathesis/bibliography.bib
+++ b/novathesis/bibliography.bib
@@ -472,3 +472,57 @@
   biburl    = {https://dblp.org/rec/conf/wsc/Banks99a.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+
+@article{combinators_dist_systems,
+  title={Protocol combinators for modeling, testing, and execution of distributed systems},
+  volume={31},
+  DOI={10.1017/S095679682000026X},
+  journal={Journal of Functional Programming},
+  publisher={Cambridge University Press},
+  author={ANDERSEN, KRISTOFFER JUST ARNDAL and SERGEY, ILYA},
+  year={2021},
+  pages={e3}
+}
+
+
+
+@inproceedings{paxos_highlevel_spec,
+  author    = {Yanhong A. Liu and
+               Saksham Chand and
+               Scott D. Stoller},
+  editor    = {Ekaterina Komendantskaya},
+  title     = {Moderately Complex Paxos Made Simple: High-Level Executable Specification
+               of Distributed Algorithms},
+  booktitle = {Proceedings of the 21st International Symposium on Principles and
+               Practice of Programming Languages, {PPDP} 2019, Porto, Portugal, October
+               7-9, 2019},
+  pages     = {15:1--15:15},
+  publisher = {{ACM}},
+  year      = {2019},
+  url       = {https://doi.org/10.1145/3354166.3354180},
+  doi       = {10.1145/3354166.3354180},
+  timestamp = {Thu, 26 Sep 2019 14:23:10 +0200},
+  biburl    = {https://dblp.org/rec/conf/ppdp/LiuCS19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{distalgo,
+  author    = {Yanhong A. Liu and
+               Scott D. Stoller and
+               Bo Lin},
+  title     = {From Clarity to Efficiency for Distributed Algorithms},
+  journal   = {{ACM} Trans. Program. Lang. Syst.},
+  volume    = {39},
+  number    = {3},
+  pages     = {12:1--12:41},
+  year      = {2017},
+  url       = {https://doi.org/10.1145/2994595},
+  doi       = {10.1145/2994595},
+  timestamp = {Tue, 06 Nov 2018 12:51:29 +0100},
+  biburl    = {https://dblp.org/rec/journals/toplas/LiuSL17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
