--- a/novathesis/template.tex
+++ b/novathesis/template.tex
@@ -369,7 +369,7 @@
 %%------------------------------------------------------------
 % Text appendixes 
 % syntax: \ntaddfile{appendix}{filename}
-% \ntaddfile{appendix}{appendix1}
+\ntaddfile{appendix}{appendix1}
 % \ntaddfile{appendix}{appendix2}
 
 %%------------------------------------------------------------
